<resources>
    <string name="app_name">AlessioIannella_LeeRaj_COMP304Lab6</string>
    <string name="enter_start_and_end_address">Enter start and end address</string>
    <string name="start_address">Start Address</string>
    <string name="please_insert_a_start_address">Please insert a start address</string>
    <string name="end_address">End Address</string>
    <string name="get_directions">Get Directions</string>
    <string name="error_getting_directions_please_try_again">Error getting directions. Please try again</string>
    <string name="hello_world">Welcome to Messaging page!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string-array name="contacts">
        <item>Larry Page</item>
        <item>Sergey Brin</item>
        <item>Eric Schmidt</item>
        <item>Andy Rubin</item>
        <item>James Gosling</item>
        <item>Anders Hejlsberg </item>
        <item>Bjarne Stroustrup</item>
    </string-array>
</resources>
