<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    android:paddingTop="32dp"
    android:paddingBottom="32dp"
    android:orientation="vertical"
    tools:context=".activities.MessageActivity">

    <TextView android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:gravity="center"
        android:id="@+id/textView" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:id="@+id/imageView"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp">
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:layout_weight="1"
            android:hint="@string/enter_message"
            android:typeface="sans"
            android:singleLine="false" />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/button"
            android:layout_weight="1"
            android:width="50dp"
            android:onClick="sendMessage"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:id="@+id/textMessage"
        android:maxLines = "10"
        android:scrollbars = "vertical" />
</LinearLayout>